css files added

--- a/index.html
+++ b/index.html
@@ -3,19 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log in</title>
+    <title>Muay Thai Book - Login</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>log in</h1>
-    <form action="http://127.0.0.1:5500/main.html">
-    <ul>
-        <li><input type="text" placeholder="username/email"></li>
-        <li><input type="password" placeholder="passwort"></li>
-    </ul>
-    <input type="submit">
-    </form>
-    <form action="http://127.0.0.1:5500/registration.html">
-        <button>Click here to create a new account!</button>
-    </form>
+    <h1>Login to Muay Thai Book</h1>
+    <h2>Get into our community to meet Muay Thai enthusiasts from all over the world!</h2>
+    <div id="Login-1">
+       <form>
+        <input type="text" placeholder="username/email"><br>
+        <input type="password" placeholder="passwort"><br>
+       </form>
+    </div>   
+    <div id="Login-2">
+        <form action="http://127.0.0.1:5500/main.html">
+            <input type="submit" value="Login">
+           </form>
+    </div>
+    <div id="Login-3">
+      </form>
+       <form action="http://127.0.0.1:5500/registration.html">
+       <button>Sign up</button>
+      </form>
+    </div>
 </body>
 </html>
