--- a/registration.html
+++ b/registration.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Muay Thai Book</title>
+    <link rel="stylesheet" href="registration.css">
 </head>
 <body>
     <h1>Create your account:</h1>
+    <div id="Create">
+    <form >
+    <input type="text" placeholder="username"><br>
+    <input type="email" placeholder="email"><br>
+    <input type="password" placeholder="password"><br>
+    <input type="password" placeholder="repeat password"><br>
+    </form>
+    </div>
+    <div id="Create">
     <form action="http://127.0.0.1:5500/index.html">
-    <ol>
-    <li><input type="text" placeholder="username"></li>
-    <li><input type="email" placeholder="email"></li>
-    <li><input type="password" placeholder="password"></li>
-    <li><input type="password" placeholder="repeat password"></li>
-    </ol>
     <input type="submit">
     </form>
+    </div>   
 </body>
 </html>
