--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
-    <h1>Contact us</h1>
+    <h1>Contact me</h1>
+    <div id="Contact">
+    <form >
+    <input type="text" placeholder="Full Name*"><br>
+    <input type="text" placeholder="phone number*"><br>
+    <input type="email" placeholder="Email adress*"><br>
+    <input type="text" placeholder="Your Personal Goals*"><br>
+    </form>
+    </div>
+    <div id="Contact">
+    <form action="http://127.0.0.1:5500/main.html">
+    <input type="submit">
+    </form>
+    </div>   
 </body>
 </html>
