--- a/logout.html
+++ b/logout.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>logout</title>
+    <link rel="stylesheet" href="logout.css">
 </head>
 <body>
-    <h1>we hope you enjoyed your learning process!</h1>
+    <h1>I hope you enjoyed your learning process!</h1>
+    <div id="logout">
     <form action="http://127.0.0.1:5500/index.html">
-        <button>Log out</button>
+        <button>Logout</button>
     </form>
+    </div>
+    <div id="logout">
+        <form action="http://127.0.0.1:5500/main.html">
+            <button>Back to homepage</button>
+        </form>
+    </div>
 </body>
 </html>
