--- a/aboutme.html
+++ b/aboutme.html
@@ -46,10 +46,11 @@
         ></iframe>
       </article>
       <div id="backhome">
-      <form action="http://127.0.0.1:5500/main.html">
-        <input type="submit" value="Back to homepage">
+        <form action="http://127.0.0.1:5500/main.html">
+          <button>Back to homepage</button>
        </form>
       </div>
     </section>
 </body>
 </html>
+
