--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,11 @@
     <form action="http://127.0.0.1:5500/main.html">
     <input type="submit">
     </form>
+    </div>
+    <div id="Contact">
+        <form action="http://127.0.0.1:5500/main.html">
+            <button>Back to homepage</button>
+        </form>
     </div>   
 </body>
 </html>
