--- a/aboutme.html
+++ b/aboutme.html
@@ -10,8 +10,12 @@
     <h1>About myself</h1>
     <section>
     <article class="fighters">
-        <img src="./img/leonfight1.JPG" height="345px" alt="leon1" />
-        <img src="./img/leonfight2.JPG" height="345px" alt="leon2" />
+        <img src="./img/leonfight4.jpg"  alt="leon4" />
+        <img src="./img/leonfight5.JPG"  alt="leon3" />
+        <img src="./img/leonfight13.jpg" height="460px" alt="leon3" />
+        <img src="./img/leonfight14.jpg"  alt="leon3" />
+        <img src="./img/leonfight17.JPG" height="401px"   alt="leon3" />
+    
         <p>(Fight Record: 4 wins, 3 losses, 1 draw)</p>
         <p>
           Hello everyone,
@@ -34,7 +38,22 @@
            If you are interested,
            feel free to contact us via our contact form. See you soon!
         </p>
-        <h2>watch my fight:</h2>
+
+        <img src="./img/leonfight3.JPG"  alt="leon3" />
+        <img src="./img/leonfight8.JPG"  alt="leon3" />
+        <img src="./img/leonfight15.JPG"  alt="leon3" />
+        <img src="./img/leonfight16.JPG"  alt="leon3" />
+        <img src="./img/leonfight9.JPG"  alt="leon3" />
+        <img src="./img/leonfight7.JPG" alt="leon3" />
+        <img src="./img/leonfight18.JPG"  alt="leon3" />
+        <img src="./img/leonfight19.JPG"  alt="leon3" />
+
+        <img src="./img/leonfight6.JPG" alt="leon3" />
+        <img src="./img/leonfight2.JPG"  alt="leon3" />
+        <img src="./img/leonfight10.JPG"  alt="leon3" />
+        <img src="./img/leonfight11.JPG"  alt="leon3" />
+
+        <h2>full fight:</h2>
         <iframe
           width="560"
           height="315"
