--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
-    <h1>Contact me</h1>
+    <h1>Contact form</h1>
     <div id="Contact">
     <form >
     <input type="text" placeholder="Full Name*"><br>
@@ -26,5 +26,6 @@
             <button>Back to homepage</button>
         </form>
     </div>   
+    
 </body>
 </html>
