thankyou files added

--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@
         <img src="./img/leonfight14.jpg"  alt="leon3" />
         <img src="./img/jom1.jpg" height="401px" alt="leon4" />
         <img src="./img/leonfight5.JPG"  alt="leon3" />
-        <img src="./img/leonfight4.jpg"  alt="leon4" />
+        <img src="./img/leonfight20.JPG"  alt="leon4" />
         <img src="./img/leonfight13.jpg" height="460px" alt="leon3" />
 
     
@@ -57,8 +57,7 @@
           allowfullscreen
         ></iframe>
       </article> <br> <br>
-      <h2>Book your individual Training session!</h2>
-      ** <mark><b>Private training</b></mark>, <mark><b>Group classes</b></mark> as well as <mark><b>Online individual training</b></mark> is now available!** <br><br>
+      <h2>Book your Training session!</h2>
       <p2>
         Today I share my knowledge to everyone who wanna learn 'The Art of Eight Limbs'. All levels are welcome - from beginners to professionals. It doesn't matter whether you wanna 
         fight (amateur to professional) or just wanna gain a healty lifestyle and enjoy learning new skills - we will reach your goals! If you want to start your own journey, feel free to <b>contact</b> us via:
@@ -69,6 +68,8 @@
        <button>Contact form</button> 
       </form>
       </div> 
+
+      ** <mark><b>Private training sessions</b></mark>, <mark><b>Group classes</b></mark> as well as <mark><b>Online 1on1 training</b></mark> is now available!** <br><br>
 
      <img src="./img/train4.jpg" height="350px" alt="leon3" />
      <img src="./img/leonwai.jpg" height="350px" alt="leon3" />
