--- a/contact.html
+++ b/contact.html
@@ -11,20 +11,33 @@
     <div id="Contact">
     <form >
     <input type="text" placeholder="Full Name*"><br>
-    <input type="text" placeholder="phone number*"><br>
+    <input type="text" placeholder="Phone number*"><br>
     <input type="email" placeholder="Email adress*"><br>
-    <input type="text" placeholder="Your Personal Goals*"><br>
     </form>
     </div>
+
+    <div id="Contact">
+        <form>
+       <input type="search" placeholder="Choose your program!" id="search" list="Training">
+        <datalist id="Training">
+            <option value="Private Training"> 
+            <option value="Group Training"> 
+            <option value="Online 1on1 Training">  
+            <option value="Individual Training & Diet Plan"> 
+      </datalist> 
+    </form>
+    </div><br>
+
+    <div id="Contact">
+    <form action="http://127.0.0.1:5500/thankyou.html">
+    <input type="submit"> 
+    </form>
+    </div>
+
     <div id="Contact">
     <form action="http://127.0.0.1:5500/main.html">
-    <input type="submit">
+    <button>Back to homepage</button>
     </form>
-    </div>
-    <div id="Contact">
-        <form action="http://127.0.0.1:5500/main.html">
-            <button>Back to homepage</button>
-        </form>
     </div>   
     
 </body>
