--- a/aboutme.html
+++ b/aboutme.html
@@ -60,8 +60,8 @@
       <h2>Book your Training session!</h2>
       <p2>
         Today I share my knowledge to everyone who wanna learn 'The Art of Eight Limbs'. All levels are welcome - from beginners to professionals. It doesn't matter whether you wanna 
-        fight (amateur to professional) or just wanna gain a healty lifestyle and enjoy learning new skills - we will reach your goals! If you want to start your own journey, feel free to <b>contact</b> us via:
-     </p2> <br>
+        fight (amateur to professional) or just wanna gain a healty lifestyle and enjoy learning new skills - we will reach your goals! <br>
+        Feel free to <b>contact</b> us via:</p2> <br>
     
      <div id="backhome">
       <form action="http://127.0.0.1:5500/contact.html">
