--- a/main.html
+++ b/main.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <h1>Welcome to Muay Thai Book!</h1>
+    <h1>Welcome to Muay Thai Book!<br>
+    <u><em>Your journey starts here</em></u></h1>
     <header>
       <nav>
         <ul>
