--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Login to Muay Thai Book</h1>
-    <h2>Get into our community to meet Muay Thai enthusiasts from all over the world!</h2>
+    <h1>Muay Thai Book <br>
+    <u><em>Your journey starts here</em></u></h1>
     <div id="Login-1">
        <form>
         <input type="text" placeholder="username/email"><br>
@@ -28,3 +28,4 @@
     </div>
 </body>
 </html>
+
