--- a/logout.html
+++ b/logout.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="logout.css">
 </head>
 <body>
-    <h1>I hope you enjoyed your learning process! <em>"The future depends on what we do in the present."</em></h1>
+    <h1>I hope you enjoyed your learning process! ...<em>"The future depends on what we do in the present."</em></h1>
     <div id="logout">
         <form action="http://127.0.0.1:5500/main.html">
             <button>Back to homepage</button>
