--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
             <a href="#legendary-fighters">Fighters</a>
           </li>
           <li>
-            <a href="http://127.0.0.1:5500/contact.html">Contact</a>
+            <a href="http://127.0.0.1:5500/contact.html">Contact&Training</a>
           </li>
           <li>
             <a href="http://127.0.0.1:5500/logout.html">Logout</a>
