readme file changed

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Contact form</h1>
+    <h2><em>Contact us and choose your individual training programm!</em></h2><br>
     <div id="Contact">
     <form >
     <input type="text" placeholder="Full Name*"><br>
@@ -39,6 +40,5 @@
     <button>Back to homepage</button>
     </form>
     </div>   
-    
 </body>
 </html>
