--- a/main.html
+++ b/main.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Muay Thai Book - Home </title>
+    <title>Leon's Muay Thai Book - Homepage</title>
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <h1>Welcome to Muay Thai Book!<br>
-    <u><em>Your journey starts here</em></u></h1>
+    <h1>Welcome back to Leon's Muay Thai Book!</h1>
     <header>
       <nav>
         <ul>
@@ -31,7 +30,7 @@
             <a href="#legendary-fighters">Fighters</a>
           </li>
           <li>
-            <a href="http://127.0.0.1:5500/contact.html">Contact&Training</a>
+            <a href="http://127.0.0.1:5500/contact.html">Contact & Training</a>
           </li>
           <li>
             <a href="http://127.0.0.1:5500/logout.html">Logout</a>
