--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muay Thai Book - Login</title>
+    <title>Login</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Muay Thai Book <br>
+    <h1>Welcome to the world of Muay Thai!<br>
     <u><em>Your journey starts here</em></u></h1>
     <div id="Login-1">
        <form>
@@ -28,4 +28,3 @@
     </div>
 </body>
 </html>
-
