main.file changeed

--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <h1>Welcome back to Leon's Muay Thai Book!</h1>
+    <h1>Leon's Muay Thai Book</h1>
     <header>
       <nav>
         <ul>
@@ -41,17 +41,28 @@
     <main>
       <section id="whatis-muaythai">
         <h1>What is Muay Thai?</h1>
-        <p>
+        <p> <SPAN STYLE="font-family:'Arial, Helvetica, sans-serif'">
           Muay Thai (Thai boxing) is a martial art and combat sport, which dates
           back to the 13th century. Known as the “science of 8 limbs, it
-          incorporates strikes using the fists, knees, shins and elbow as well
-          as an element of grappling. With its roots in Thailand’s military, It
+          incorporates strikes using the fists, knees, shins and elbows as well
+          as an element of grappling. Muay Thai techniques evolved for use on the battlefields 
+          by ancient Thai warriors. With its roots in Thailand’s military, it
           is now trained across the world and numerous organisations broadcast
           Muay Thai ring fighting events to millions of fans globally. It’s also
-          a key component of MMA styles such as the fighting you would see in
-          UFC or Bellator bouts.
-        </p>
+          a key component of MMA (Mixed Martial Arts) styles.
+        </SPAN></p>
+        
         <img src="./img/fight.jfif" alt="a fighter throws a roundhouse kick" />
+        
+        <h1>What are the benefits of Muay Thai training?</h1>
+        <p> <SPAN STYLE="font-family:'Arial, Helvetica, sans-serif'">
+          First of all, everyone can start training Muay Thai. It doesn't matter if you want to compete,
+          or just enjoy learning new skills and getting in the best shape of your life.
+          Muay Thai isn't just for improving your cardio. It's also much more than a full-body workout. 
+          The skills that you learn in Muay Thai classes are also effective for self-defence. 
+        </p> </SPAN>
+
+        <img src="./img/class.jpg" width="400px" alt="a fighter throws a roundhouse kick" />
       </section>
 
       <section id="history-mt">
@@ -73,7 +84,7 @@
       </section>
 
       <section id="traditions-mt">
-        <h2>Traditions of Muay Thai</h2>
+        <h2>Traditions in Muay Thai</h2>
         <ul>
           <li>
             <b>Wai Khru Ram Muay:</b> This is a ceremonial dance that fighters
@@ -102,7 +113,7 @@
           </li>
         </ul>
         <img src="./img/waikru.jfif" alt="waikru" />
-        <p>Two fighters dancing the Wai Khru Ram Muay.</p>
+        <p>(Two fighters dancing the Wai Khru Ram Muay.)</p>
       </section>
 
       <section id="rules-mt">
