--- a/main.html
+++ b/main.html
@@ -52,7 +52,7 @@
           a key component of MMA (Mixed Martial Arts) styles.
         </SPAN></p>
         
-        <img src="./img/fight.jfif" alt="a fighter throws a roundhouse kick" />
+        <img src="./img/fight.jfif" width="400px" alt="a fighter throws a roundhouse kick" /> <br> <br> 
         
         <h1>What are the benefits of Muay Thai training?</h1>
         <p> <SPAN STYLE="font-family:'Arial, Helvetica, sans-serif'">
@@ -62,7 +62,7 @@
           The skills that you learn in Muay Thai classes are also effective for self-defence. 
         </p> </SPAN>
 
-        <img src="./img/class.jpg" width="400px" alt="a fighter throws a roundhouse kick" />
+        <img src="./img/class.jpg" width="400px" alt="group training" />
       </section>
 
       <section id="history-mt">
@@ -285,7 +285,4 @@
   <footer>
     <a href="#">Go to top</a>
   </footer>
-</html>
-</main>
-</body>
 </html>
