main font corrected

--- a/main.html
+++ b/main.html
@@ -52,7 +52,7 @@
           a key component of MMA (Mixed Martial Arts) styles.
         </SPAN></p>
         
-        <img src="./img/fight.jfif" width="400px" alt="a fighter throws a roundhouse kick" /> <br> <br> 
+        <img src="./img/fight.jfif" width="400px" alt="a fighter throws a roundhouse kick" /> <br> 
         
         <h1>What are the benefits of Muay Thai training?</h1>
         <p> <SPAN STYLE="font-family:'Arial, Helvetica, sans-serif'">
@@ -67,7 +67,7 @@
 
       <section id="history-mt">
         <h2>The history of Muay Thai</h2>
-        <p>
+        <p> <SPAN STYLE="font-family:'Arial, Helvetica, sans-serif'">
           Muaythai has been a part of Thai history and heritage for hundreds of
           years, as with most traditions from ancient times. Many different
           versions of the history of Muaythai exist, but all sources agree that
@@ -79,7 +79,7 @@
           each body part. The underlying philosophy of this manual implied that
           fighting was more than the use of weapons, but most importantly,
           should engage total commitment from mind, body and soul.
-        </p>
+        </p> </span>
         <img src="./img/historymt.jpg" alt="traditional" width="500" />
       </section>
 
@@ -223,9 +223,9 @@
           <img src="./img/buakaw2.jpeg" height="345px" alt="buakaw" />
           <img src="./img/buakaw3.jpeg" height="345px" alt="buakaw" />
           <p>(Fight Record: 241 wins, 24 losses, 14 draws)</p>
-          <p>
+          <p> <SPAN STYLE="font-family:'Arial, Helvetica, sans-serif'">
             Known for his fierce fighting style, Buakaw is a former two-time Omnoi Stadium champion, Lumpinee Stadium Toyota Marathon champion, former #1-ranked fighter in Lumpinee Stadium, Thailand Featherweight champion, two-time K-1 World MAX champion and 2011 & 2012 Thai Fight tournament champion. He is regarded as one of the greatest Muay Thai fighters ever.
-          </p>
+          </p> 
           <iframe width="560" height="315" src="https://www.youtube.com/embed/_8W7bgC2_i8?si=loltJDFFxRz7YbH-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
           </iframe>
         </article>
@@ -234,7 +234,7 @@
           <img src="./img/samart.jpg" height="345px" alt="samart" />
           <img src="./img/samartfight.jfif" height="345px" alt="samartfighting" />
           <p>(Fight Record:129 wins, 19 losses, 2 draws)</p>
-          <p>
+          <p> <SPAN STYLE="font-family:'Arial, Helvetica, sans-serif'">
             Samart Payakaroon is often hailed as one of the greatest Muay Thai
             fighters of all time. He possessed an extremely high fight IQ,
             lightning quick reflexes, and excellent ring vision. Samart also
@@ -262,7 +262,7 @@
           <img src="./img/Saenchai.jpg" height="345px" alt="saenchai" />
           <img src="./img/saenfight.jfif" height="345px" alt="saenchaifighting" />
           <p>(Fight Record: 317 wins, 41 losses, 6 draws)</p>
-          <p>
+          <p> <SPAN STYLE="font-family:'Arial, Helvetica, sans-serif'">
             Saenchai is a Thai kickboxer who is widely regarded as one of the
             best Muay Thai fighters of all time, who is still active. He has won the Lumpinee Stadium
             title, the most prestigious title in Muay Thai, in four different
