main.html fixed

--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
 </head>
 <body>
     <h1>Welcome to the world of Muay Thai!<br>
-    <u><em>Your journey starts here</em></u></h1>
+    <u><em>Your journey starts here</em></u>
+    </h1>
     <div id="Login-1">
        <form>
-        <input type="text" placeholder="username/email"><br>
-        <input type="password" placeholder="passwort"><br>
+       <input type="text" placeholder="username/email"><br>
+       <input type="password" placeholder="passwort"><br>
        </form>
     </div>   
     <div id="Login-2">
         <form action="http://127.0.0.1:5500/main.html">
-            <input type="submit" value="Login">
-           </form>
+        <input type="submit" value="Login">
+        </form>
     </div>
     <div id="Login-3">
-      </form>
        <form action="http://127.0.0.1:5500/registration.html">
        <button>Sign up</button>
-      </form>
+       </form>
     </div>
 </body>
 </html>
