--- a/registration.html
+++ b/registration.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registration</title>
-    <link rel="stylesheet" href="registration.css">
-</head>
-<body>
+    <link rel="stylesheet" href="registration.css" />
+  </head>
+  <body>
     <h1>Create your account:</h1>
     <div id="Create">
-      <form >
-      <input type="text" placeholder="username"><br>
-      <input type="email" placeholder="email"><br>
-      <input type="password" placeholder="password"><br>
-      <input type="password" placeholder="repeat password"><br>
+      <form>
+        <input type="text" placeholder="username" /><br />
+        <input type="email" placeholder="email" /><br />
+        <input type="password" placeholder="password" /><br />
+        <input type="password" placeholder="repeat password" /><br />
       </form>
     </div>
     <div id="Create">
       <form action="http://127.0.0.1:5500/index.html">
-      <input type="submit">
+        <input type="submit" />
       </form>
-    </div>   
-</body>
+    </div>
+  </body>
 </html>
