--- a/contact.html
+++ b/contact.html
@@ -1,41 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
-    <link rel="stylesheet" href="contact.css">
-</head>
-<body>
+    <link rel="stylesheet" href="contact.css" />
+  </head>
+  <body>
     <h1>Contact form</h1>
-    <h2><em>Contact us and choose your individual training programm!</em></h2><br>
+    <h2><em>Contact us and choose your individual training programm!</em></h2>
+    <br />
     <div id="Contact">
-      <form >
-      <input type="text" placeholder="Full Name*"><br>
-      <input type="text" placeholder="Phone number*"><br>
-      <input type="email" placeholder="Email adress*"><br>
+      <form>
+        <input type="text" placeholder="Full Name*" /><br />
+        <input type="text" placeholder="Phone number*" /><br />
+        <input type="email" placeholder="Email adress*" /><br />
       </form>
     </div>
     <div id="Contact">
-        <form>
-        <input type="search" placeholder="Choose your program!" id="search" list="Training">
+      <form>
+        <input
+          type="search"
+          placeholder="Choose your program!"
+          id="search"
+          list="Training"
+        />
         <datalist id="Training">
-            <option value="Private Training"> 
-            <option value="Group Training"> 
-            <option value="Online 1on1 Training">  
-            <option value="Individual Training & Diet Plan"> 
-        </datalist> 
-        </form>
-    </div><br>
+          <option value="Private Training"></option>
+          <option value="Group Training"></option>
+          <option value="Online 1on1 Training"></option>
+          <option value="Individual Training & Diet Plan"></option>
+        </datalist>
+      </form>
+    </div>
+    <br />
     <div id="Contact">
-       <form action="http://127.0.0.1:5500/thankyou.html">
-       <input type="submit"> 
-       </form>
+      <form action="http://127.0.0.1:5500/thankyou.html">
+        <input type="submit" />
+      </form>
     </div>
     <div id="Contact">
-       <form action="http://127.0.0.1:5500/main.html">
-       <button>Back to homepage</button>
-       </form>
-    </div>   
-</body>
+      <form action="http://127.0.0.1:5500/main.html">
+        <button>Back to homepage</button>
+      </form>
+    </div>
+  </body>
 </html>
