--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
-    <h1>Welcome to the world of Muay Thai!<br>
-    <u><em>Your journey starts here</em></u>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <h1>
+      Welcome to the world of Muay Thai!<br />
+      <u><em>Your journey starts here</em></u>
     </h1>
     <div id="Login-1">
-       <form>
-       <input type="text" placeholder="username/email"><br>
-       <input type="password" placeholder="passwort"><br>
-       </form>
-    </div>   
+      <form>
+        <input type="text" placeholder="username/email" /><br />
+        <input type="password" placeholder="passwort" /><br />
+      </form>
+    </div>
     <div id="Login-2">
-        <form action="http://127.0.0.1:5500/main.html">
-        <input type="submit" value="Login">
-        </form>
+      <form action="http://127.0.0.1:5500/main.html">
+        <input type="submit" value="Login" />
+      </form>
     </div>
     <div id="Login-3">
-       <form action="http://127.0.0.1:5500/registration.html">
-       <button>Sign up</button>
-       </form>
+      <form action="http://127.0.0.1:5500/registration.html">
+        <button>Sign up</button>
+      </form>
     </div>
-</body>
+  </body>
 </html>
