--- a/logout.html
+++ b/logout.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>logout</title>
-    <link rel="stylesheet" href="logout.css">
-</head>
-<body>
-    <h1>I hope you enjoyed your learning process! ...<em>"The future depends on what we do in the present."</em></h1>
+    <link rel="stylesheet" href="logout.css" />
+  </head>
+  <body>
+    <h1>
+      I hope you enjoyed your learning process! ...
+      <em>"The future depends on what we do in the present."</em>
+    </h1>
     <div id="logout">
-        <form action="http://127.0.0.1:5500/main.html">
+      <form action="http://127.0.0.1:5500/main.html">
         <button>Back to homepage</button>
-        </form>
+      </form>
     </div>
     <div id="logout">
-        <form action="http://127.0.0.1:5500/index.html">
+      <form action="http://127.0.0.1:5500/index.html">
         <button>Logout</button>
-        </form>
+      </form>
     </div>
-</body>
+  </body>
 </html>
