--- a/thankyou.html
+++ b/thankyou.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thankyou</title>
-    <link rel="stylesheet" href="thankyou.css">
-</head>
-<body>
-    <h1>Thank you! We've received your Message and will respond in 24 hours.</h1>
+    <link rel="stylesheet" href="thankyou.css" />
+  </head>
+  <body>
+    <h1>
+      Thank you! We've received your Message and will respond in 24 hours.
+    </h1>
     <div id="logout">
-        <form action="http://127.0.0.1:5500/main.html">
+      <form action="http://127.0.0.1:5500/main.html">
         <button>Back to homepage</button>
-        </form>
+      </form>
     </div>
-</body>
+  </body>
 </html>
