--- a/main.html
+++ b/main.html
@@ -86,26 +86,26 @@
             perform before the fight to show respect to their teachers,
             ancestors, and gods. It also serves as a warm-up and a way to
             display their skills and style.
-          </li>
+          </li><br>
           <li>
             <b>Mongkon:</b> This is a sacred headband that fighters wear before
             the fight, which is believed to bring good luck and protection. It
             is only handled by the fighter and the coach, and it is removed
             before the fight starts.
-          </li>
+          </li><br>
           <li>
             <b>Pra Jiad:</b> This is a piece of cloth or rope that fighters tie
             around their arms or waist, which also symbolizes good luck and
             blessing from their family. Some fighters use a piece of their
             mother’s dress for this purpose.
-          </li>
+          </li><br>
           <li>
             <b>Sarama:</b> This is the music that accompanies the fight, which
             consists of four instruments: the Pi Java (clarinet), the Klong Kaak
             (drums), the Ching (cymbals) and the Kong Mong (heavy drum). The
             music matches the tempo and intensity of the fight, and it adds
             excitement and atmosphere to the event.
-          </li>
+          </li><br>
         </ul>
         <img src="./img/waikru.jfif" alt="waikru" />
         <p>(Two fighters dancing the Wai Khru Ram Muay.)</p>
@@ -116,19 +116,19 @@
           <li>
             Traditional Fights are divided into five rounds, with each round
             lasting three minutes
-          </li>
+          </li><br>
           <li>
             Weight classes are in place to ensure that fighters are evenly
             matched
-          </li>
-          <li>Illegal moves include groin strikes, headbutts, and biting</li>
+          </li><br>
+          <li>Illegal moves include groin strikes, headbutts, and biting</li><br>
           <li>
             Referees can stop a fight if a fighter is in danger or unable to
             defend themselves
-          </li>
+          </li><br>
           <li>
             A fighter can win by knockout, technical knockout, or decision
-          </li>
+          </li><br>
         </ol>
         <p><b>learn more about the rules:</b></p>
         <iframe
@@ -154,7 +154,7 @@
               <b>Key Traits:</b> Versatility, movement, defense, and outscoring
               opponents.
             </li>
-          </ul>
+          </ul><br>
           <li>Muay Khao</li>
           <ul>
             <li>
@@ -165,7 +165,7 @@
               <b>Approach:</b>Wear down opponents with clinching and score
               points using knees to the body.
             </li>
-          </ul>
+          </ul><br>
           <li>Muay Mat</li>
           <ul>
             <li>
@@ -175,7 +175,7 @@
             <li>
               <b>Approach:</b> Relentless forward movement, trading blow for
               blow.
-            </li>
+            </li><br>
           </ul>
           <li>Muay Tae</li>
           <ul>
@@ -186,7 +186,7 @@
             <li>
               <b>Goal:</b> Land knockout blows by battering opponents with
               shins.
-            </li>
+            </li><br>
           </ul>
           <li>Muay Bouk</li>
           <ul>
@@ -194,7 +194,7 @@
               <b>Description:</b> The most aggressive style, characterized by
               relentless intensity.
             </li>
-            <li><b>Approach:</b> Always at 100%, aiming for knockouts.</li>
+            <li><b>Approach:</b> Always at 100%, aiming for knockouts.</li><br>
           </ul>
         </ol>
         <p><b>learn more about the styles:</b></p>
