--- a/aboutme.html
+++ b/aboutme.html
@@ -20,10 +20,9 @@
         <p>
         <h2>My way into Muay Thai</h2>
           Hello everyone,
-          my name is Leon. I started with Muay Thai when I was seventeen years old. At that point, competitive sport has always been my greatest passion. 
-          After one year of training, I decided to compete and won my first amateur fight. Within the following two years, I fought four more fights.
-          After a two year break during Covid19, I decided to follow my dream and gave my Muay Thai debut under professional rules in a 
-          local stadium in Thailand, against a fighter who was 10 kg heavier and much more experienced (100+ professional fights). Check it out:
+          my name is Leon. I started with Muay Thai when I was seventeen years old. After one year of training, I decided to compete and won my
+          first amateur fight. Within the following two years, I fought four more fights. After a two year break during Covid19, I gave my Muay Thai
+          debut under professional rules in a local stadium in Thailand, against a fighter who was 10 kg heavier and much more experienced (100+ professional fights). Check it out:
         </p><br>
         <img src="./img/leonfight8.JPG"  alt="leon3" />
         <img src="./img/leonfight15.JPG"  alt="leon3" />
